更新 路线图

--- a/docs/roadmap.mdx
+++ b/docs/roadmap.mdx
@@ -7,73 +7,70 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 <TopBanners />
 
-
-在 Open WebUI，我们致力于不断增强我们的平台，为用户提供最佳体验。下面，您将看到我们正在进行和未来发展的结构化路线图，分为界面、信息检索和社区三个类别。
+在 Open WebUI，我们始终致力于不断完善平台，为用户提供最佳体验。以下是我们当前和未来发展的结构化路线图，主要分为界面、信息检索和社区三大板块。
 
 ## 界面 🖥️
 
-我们的界面创新路线图旨在创建一个高度直观和易于使用的平台。这不仅能提高用户满意度，还能通过减少用户的认知负担来提升生产力。
+我们的界面创新路线图旨在打造一个高度直观且易用的平台。这不仅能提升用户满意度，还能通过降低认知负担来提高工作效率。
 
-- 🔗 **ReACT 工具调用支持**：平台将实现 ReACT（推理 + 行动）用于即时工具函数调用，使模型能够在对话过程中实时动态与外部工具交互。这种高级功能将使工作流程更具交互性和效率，简化生态系统内的问题解决。
+- 🔗 **ReACT 工具调用支持**：平台将实现 ReACT（推理 + 行动）机制，支持实时工具函数调用，使模型能够在对话过程中动态调用外部工具。这一先进功能将提升工作流程的交互性和效率，简化整个生态系统中的问题解决过程。
 
-- 📜 **MCP（模型上下文协议）工具支持**：引入对 MCP 框架的支持，以建立互连 AI 系统和模块之间的无缝通信和上下文跟踪。这确保了上下文的保持、工作流程的维护和工具的协同运作，减少了手动干预或重新初始化的需求。
+- 📜 **MCP（模型上下文协议）工具支持**：引入 MCP 框架支持，实现 AI 系统和模块间的无缝通信与上下文跟踪。这确保了上下文的连续性、工作流程的稳定性以及工具间的协同运作，大大减少手动干预的需求。
 
-- 📦 **打包单一二进制可执行文件**：简化部署并确保跨平台兼容性，我们的目标是将界面提供为单一二进制可执行文件。这种方法将促进轻松安装和更新，显著提升所有用户的可用性，特别是对于技术专业知识有限的用户。
+- 📦 **打包单一可执行文件**：为简化部署并确保跨平台兼容性，我们计划将界面打包为单一可执行文件。这种方式将极大简化安装和更新流程，特别适合技术经验有限的用户。
 
-- 👤 **用户页面**：用户可以创建帖子的个人用户页面功能。该功能还将包括关注者、点赞和评论等功能。这使用户能够有效地与更广泛的社区分享他们的模型配置、提示和文件，在平台周围创建一个更丰富、更紧密连接的生态系统。
+- 👤 **用户主页**：提供个性化用户主页功能，支持发布内容、关注、点赞和评论等社交特性。用户可以方便地分享模型配置、提示词和文件，打造一个更具活力的平台社区生态。
 
-- 📝 **AI 驱动的笔记**：受 Notion 和 Obsidian 等工具的启发，我们计划引入一个集成 AI 的强大笔记功能。从简单的笔记到完整的文档创建，这个工具将提供无缝体验，全部在平台内本地集成。
+- 📝 **AI 智能笔记**：借鉴 Notion 和 Obsidian 等优秀工具的理念，我们将推出集成 AI 的智能笔记功能。从简单记录到专业文档创作，这个工具将为用户提供流畅的本地化使用体验。
 
-- 📈 **高级用户跟踪和成本管理工具**：用户将获得全面的工具，用于跟踪应用程序性能和用户活动，以及有效管理成本。这些工具将为用户提供所需的数据，以做出明智的决策，改善用户体验，并保持预算控制，优化其 AI 应用程序中的资源使用。
+- 📈 **高级用户分析和成本管理工具**：为用户提供全方位的应用性能监控和成本管理工具。通过这些工具，用户可以做出更明智的决策，优化使用体验，有效控制预算支出。
 
-- 🧠 **AI 工作流工具**：一个基于节点的工具，用于编排和组合 AI 系统的多个方面。这个工具将允许用户以可视化方式连接不同的 AI 模块和服务，轻松创建复杂的工作流程。它旨在使用户能够充分发挥 AI 的潜力，而无需深入的 AI 编程知识。
+- 🧠 **AI 工作流编排工具**：提供基于节点的可视化工具，用于组织和编排 AI 系统的各个组件。用户可以通过简单的拖拽操作连接不同的 AI 模块和服务，轻松创建复杂的工作流程，无需深入的编程知识。
 
-- 🔊 **本地文本转语音集成**：此功能将允许自然语言处理将文本转换为逼真的语音音频，从而使平台更易于访问，特别是对于视障用户。这种集成有助于在无需屏幕交互的情况下消费信息，促进多任务处理并提高用户参与度。
+- 🔊 **本地语音合成**：集成文本转语音功能，将文字自然转换为逼真的语音。这项功能不仅让平台更易于视障用户使用，还支持免手动操作的信息获取，提升多任务处理效率。
 
-- 📣 **唤醒词检测**：通过语音命令实现免提操作不仅增强了可访问性，还与物联网和智能环境的新兴趋势保持一致，使我们的平台面向未来。
+- 📣 **语音唤醒**：引入语音命令支持，实现免提操作，顺应物联网和智能环境发展趋势，让平台具备面向未来的技术能力。
 
-- 💻 **更好的代码执行**：增强平台内的编码功能支持广泛的开发活动，使其成为开发人员的一站式解决方案，从而吸引更广泛的技术受众并培养强大的开发者社区。
+- 💻 **代码执行优化**：增强平台的代码处理能力，支持更多开发场景，打造开发者的一站式解决方案，吸引更广泛的技术社区参与。
 
-- 🤖 **代码解释器功能**：嵌入平台的灵活代码解释器可以支持多种编程语言，这减少了对外部工具的依赖并简化了开发过程，提高效率。
+- 🤖 **代码解释器**：内置支持多种编程语言的代码解释器，减少对外部工具的依赖，提升开发效率。
 
-- 🔧 **简化的微调支持**：Open WebUI 将通过允许用户仅通过使用界面和评价响应来自动构建微调数据集，从而提供无缝的微调过程。我们将提供 Python 笔记本来帮助预处理您的数据集，使其直接从笔记本准备好进行微调。这种方法将非常简单，并优雅地将微调集成到用户工作流程中。
-
+- 🔧 **简化的模型微调**：Open WebUI 将提供便捷的模型微调功能，用户只需通过正常使用界面并对响应进行评分，就能自动构建微调数据集。我们还将提供 Python 工具包，帮助预处理数据集，实现从笔记本直接开始微调的流畅体验。
 
 ## 信息检索（RAG）📚
 
-Open WebUI 目前提供了一个能够高效使用现有信息检索（IR）模型的界面。然而，我们相信还有巨大的改进空间。我们充分认识到我们当前 RAG（检索增强生成）实现在我们的 WebUI 中的局限性，理解一刀切的方法无法有效满足所有用户的需求。
+目前，Open WebUI 提供了高效使用现有信息检索（IR）模型的界面。但我们认为还有很大的提升空间。我们深知当前检索增强生成（RAG）实现的局限性，明白统一的解决方案无法满足所有用户的需求。
 
-为了解决这个问题，我们致力于将我们的框架转变为高度模块化和可广泛配置的。这个新方向将使用户能够通过一个简单、交互式的界面轻松地根据其特定需求定制信息检索过程，允许简单的拖放定制。这种改进旨在通过提供更适应性和个性化的 IR 设置来显著提升用户体验。
+因此，我们正在将框架改造为高度模块化和可配置的系统。通过简单直观的交互界面，用户可以轻松定制检索流程，实现拖拽式的个性化配置。这些改进将显著提升用户体验，让信息检索更加灵活和个性化。
 
-以下是我们推进信息检索能力的重点计划：
+以下是我们在信息检索领域的重点发展计划：
 
-- 🌐 **可定制的 RAG 框架**：设想一个未来，您可以通过用户友好的界面轻松定制您的 IR 设置。这将包括用户可以拖放和配置的模块化组件，无需深入的技术知识。
+- 🌐 **可定制 RAG 框架**：打造用户友好的界面，让用户无需专业知识就能轻松配置检索系统，支持模块化组件的拖放操作。
 
-- 🔄 **与最先进方法的高级集成**：我们的目标是整合检索方法的最新发展，通过先进的技术和架构提高准确性和效率。
+- 🔄 **前沿技术集成**：持续整合最新的检索技术，通过先进的架构提升准确性和效率。
 
-- 🔍 **专门的研发**：我们正在扩大研发规模，与领先的研究实体合作，发现和整合突破当前方法边界的新型检索方法。
+- 🔍 **深入研发**：加大研发投入，与领先研究机构合作，探索突破性的检索方法。
 
-## 社区 🤝
+## 社区建设 🤝
 
-我们的目标是创建一个充满活力的社区，每个人都可以为共享知识和发展做出贡献并从中受益：
+我们致力于打造一个充满活力的社区，让每个参与者都能贡献知识、分享经验：
 
-- 🏆 **LLM 排行榜**：社区驱动的方法来评估和排名模型确保了透明度和持续改进，利用实际应用来对性能进行基准测试，而不是依赖可能无法反映实际效用的标准数据集。
+- 🏆 **大语言模型评测榜单**：采用社区驱动的方式评估和排名模型，注重实际应用场景的性能测试，确保评测结果的实用性和透明度。
 
-- 👥 **子社区**：鼓励小众社区策划数据集和优化提示可以导致更好的调优模型，因为这些社区具有在更广泛的数据集中通常被忽视的特定见解和详细反馈。
+- 👥 **专业子社区**：支持特定领域的社区建设，促进专业数据集的整理和提示词优化，充分利用专业用户的深度见解。
 
-🔗 **社区白皮书**：在我们的[白皮书](https://openwebui.com/assets/files/whitepaper.pdf)中探索我们的详细策略，并加入我们塑造 AI 驱动平台的未来。
-
+🔗 **社区白皮书**：欢迎在我们的[白皮书](https://openwebui.com/assets/files/whitepaper.pdf)中了解详细战略，一起参与塑造 AI 平台的未来。
 
 # 未来愿景 🔭
 
-我们不懈的努力源于我们深深珍视的清晰愿景：增强您的日常生活，节省时间，让您能够更多地关注真正重要的事情。
+我们孜孜不倦的努力源于一个清晰的愿景：让 AI 真正服务于您的日常生活，节省宝贵的时间，让您能够专注于真正重要的事物。
 
-想象一个世界，您想到什么，它就会发生。您想要一杯完全按照您喜欢的方式制作的咖啡，它就为您冲泡好了。一个世界，您只需想到一个特定格式的全面数据分析报告，它就以您思考的速度完成。核心理念是将耗时的常规任务交给我们的 AI 界面，释放您的时间和注意力。
+想象这样一个世界：您的想法可以立即变为现实。想要一杯完全符合个人口味的咖啡，它就已经为您准备好了。需要某种格式的数据分析报告，只需动念就能立即生成。我们的核心理念是让 AI 接管繁琐的日常任务，让您的时间和精力得到真正的解放。
 
-这不是科幻的未来；我们现在就在共同努力实现它。随着我们的 AI 模型逐渐变得更加强大并直观地理解您的特定需求，您最平凡的责任变得自动化。通过这种深刻的转变，我们的集体时间可以重新分配到宏大的事业中。想想太空探索、长寿研究或者只是与亲人共处的额外时光。
+这不是遥不可及的未来；我们正在共同努力实现它。随着 AI 模型变得越来越强大，越来越懂得您的需求，日常琐事将逐渐实现自动化。这种转变将让我们有更多时间投入到更有意义的事业中，无论是探索太空、研究长寿，还是与所爱之人共度美好时光。
 
-创造这个想象中的未来并不容易，但在您的帮助下，我们相信它是可以实现的。Open WebUI 不仅仅是技术 - 它是为了增强您的生活，为真正重要的事情留出更多空间。我们一起努力创造更光明的明天。感谢您加入这个非凡的旅程。
+创造这样的未来并非易事，但有了您的支持，我们相信这个愿景终将实现。Open WebUI 不仅仅是一个技术平台，它是提升生活品质的助手，为真正重要的事情创造更多可能。让我们携手共进，开创更美好的明天。感谢您与我们同行在这段非凡的旅程中。
 
 ---
 
-加入我们，随着路线图中这些雄心勃勃和变革性的功能，一起推动技术的边界！💡🚀 在我们努力使 Open WebUI 成为技术进步的先锋工具的过程中，您的参与和反馈至关重要。
+欢迎加入我们，一起通过这些富有远见的创新功能推动技术进步！💡🚀 您的参与和反馈对于将 Open WebUI 打造成引领技术革新的先锋平台至关重要。
