更新中文翻译

--- a/docs/mission.mdx
+++ b/docs/mission.mdx
@@ -9,30 +9,30 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 ### 创始人寄语
 
-在深入了解我们的使命之前，我们邀请您阅读我们创始人的博客文章：["为什么我要构建 Open WebUI"](https://jryng.com/thoughts/why-open-webui)。在这篇文章中，Tim 分享了推动 Open WebUI 愿景前进的灵感、挑战和希望。这是对我们项目本质的一个真诚介绍！
+在深入了解我们的使命之前，我们诚挚邀请您阅读创始人的博客文章：["为什么我要创建 Open WebUI"](https://jryng.com/thoughts/why-open-webui)。在这篇文章中，Tim 分享了推动 Open WebUI 愿景前进的灵感、挑战和希望。这是对我们理念最真诚的诠释！
 
 ---
 
 你好！👋
 
-想象一个世界，本地运行的开源模型可以在任何机器上运行，团结一致，超越像 GPT-4 这样的专有巨头。更好的是，想象我们都有能力使用高质量、精心策划的数据从头开始训练和复制像 GPT-4 或 GPT-5 这样的最先进模型。
+想象这样一个世界：能在任何设备上运行的本地开源模型通过协同合作，性能超越了像 GPT-4 这样的专有巨头。更令人振奋的是，我们每个人都能够使用高质量、精心整理的数据，从零开始训练和复制像 GPT-4 或 GPT-5 这样的前沿模型。
 
-但是，这里有一个问题：在创建这些基础模型和微调模型时，最大的挑战之一是对**[高质量数据](https://arxiv.org/abs/2305.11206)**的巨大需求，这些数据的收集和策划既昂贵又耗时。这就是 Open WebUI 使命的切入点。我们的使命是通过构建最好的 AI 界面并从我们的用户社区众包策划数据集来为这一愿景做出贡献。
+不过现实中，我们面临着一个重要挑战：在创建这些基础模型和进行微调时，我们急需**[高质量数据](https://arxiv.org/abs/2305.11206)**，而这些数据的收集和整理既耗费金钱又耗费时间。这正是 Open WebUI 使命的意义所在。我们致力于通过打造最优秀的 AI 界面，并从我们活跃的用户社区中众包收集优质数据集，为实现这一愿景贡献力量。
 
 — [Tim](https://github.com/tjbck)
 
 ---
 
-我们的使命建立在这样一个信念之上：AI 技术对社会具有变革性的潜力，但由于复杂的设置要求，其益处一直受到限制。认识到这一点，我们致力于通过开发一个易于安装、功能丰富的本地 WebUI 来民主化 AI，该界面设计为无需互联网接入即可本地运行。使任何具备基本技术技能的人都能利用 AI 的力量，有效地将其能力带给广大社区。
+我们的使命源于这样的信念：AI 技术虽然蕴含着改变社会的巨大潜力，但由于部署过程复杂，其价值尚未被充分释放。认识到这一点，我们致力于通过开发一个易于安装、功能丰富的本地 WebUI 来推动 AI 民主化，这个界面无需联网即可在本地运行。我们的目标是让每个具备基本技术知识的人都能轻松驾驭 AI 的力量，将这项技术的能力带给更广泛的社区。
 
-我们努力的核心是创建一个开源的 AI 工具生态系统。我们的承诺在于使 AI 不仅可以访问，而且对每个人都有益。我们设想的未来是 AI 作为社会进步的杠杆，推动所有社区的进步和技术突破。
+我们努力的核心是打造一个开源的 AI 工具生态系统。我们承诺不仅要让 AI 变得触手可及，更要确保每个人都能从中受益。我们期待着这样的未来：AI 成为推动社会进步的助力器，为各个社区带来进步和技术突破。
 
-通过消除技术障碍并使 AI 的优势普遍可及，我们旨在促进全球范围内的积极影响。我们的最终目标是确保 AI 成为积极变革的催化剂，帮助弥合差距，创造一个更加公平的社会，让每个人都能从技术进步中受益。
+通过消除技术壁垒，让 AI 的优势为所有人所用，我们致力于在全球范围内产生积极影响。我们的终极目标是将 AI 打造成积极变革的催化剂，帮助消除鸿沟，创造一个更加公平的社会，让科技进步的果实惠及每一个人。
 
-### 我们的愿景：共同塑造未来
+### 我们的愿景：携手共创未来
 
-在我们使命的核心，不仅仅是设想一个先进 AI 技术普遍可及的未来，更是要积极地朝着这个方向努力。我们的工作不仅限于开发我们的 WebUI；我们正在前沿创建一个体现 AI 技术民主化的生态系统。这个生态系统被设想为一个充满活力的、社区驱动的平台，将成为共享知识的储存库——从模型预设和自定义提示到有价值的聊天记录。在这个空间中，我们社区的集体智慧将作为 AI 持续发展和改进的驱动力，确保这些进步服务于我们这些技术的实际用户。
+在我们使命的核心，不仅是展望一个 AI 技术普惠共享的未来，更要积极付诸行动去实现它。我们的工作不仅限于开发 WebUI，更致力于创建一个体现 AI 技术民主化的生态系统。这个生态系统将成为一个充满活力的、由社区驱动的平台，汇集从模型预设、个性化提示词到宝贵对话记录等各类知识资源。在这里，社区的集体智慧将推动 AI 不断进化和完善，确保技术发展始终服务于我们这些实际使用者。
 
-我们的策略旨在直面 AI 的复杂挑战，如模型微调和数据集策划。通过利用我们社区的集体技能和见解，我们将开辟创新途径，不仅提高 AI 模型的精确性和相关性，而且确保这些改进得到公开共享。我们的目标明确：民主化对精炼的、用户策划的数据集的访问，从而消除所有人推进 AI 的障碍。
+我们的策略直面 AI 领域的各项挑战，包括模型微调和数据集整理。借助社区成员的集体智慧和专业技能，我们将开创新的途径，不仅提升 AI 模型的准确性和实用性，还要确保这些进步成果能够公开共享。我们的目标很明确：让精心整理的、用户贡献的数据集触手可及，扫除所有人参与 AI 发展的障碍。
 
-在这个旅程中，我们的愿景作为我们的北极星，指引我们将大胆的抱负转化为现实的努力。我们邀请您加入我们的这项事业，因为我们正在努力确保 AI 技术成为全球各地个人和社区的赋能资源。
+在这个征程中，我们的愿景如同指路明灯，指引着我们将雄心壮志转化为现实。我们真诚邀请您加入这项事业，与我们一起努力，让 AI 技术真正成为增强全球各地个人和社区能力的有力工具。
