--- a/docs/sponsorships.mdx
+++ b/docs/sponsorships.mdx
@@ -5,30 +5,30 @@ title: "🌐 赞助"
 
 [![](https://img.shields.io/static/v1?label=Sponsor&message=%E2%9D%A4&logo=GitHub&color=%23fe8e86)](https://github.com/sponsors/tjbck)
 
-## 您的支持的影响
+## 支持的影响
 
-随着 Open WebUI 的发展，我们面临的任务和挑战也在扩大。[Tim](/team) 是这个项目的核心，不知疲倦地工作以确保 Open WebUI 的各个方面不仅能够运作，而且能够蓬勃发展。然而，想象一下，如果有一点额外的支持，我们还能做出哪些改进。
+随着 Open WebUI 的成长，我们面临的任务和挑战也在不断扩大。[Tim](/team) 是这个项目的核心，他不知疲倦地工作，确保 Open WebUI 的各个方面不仅能正常运行，而且能蓬勃发展。若能获得更多支持，我们必将实现更大的突破。
 
-考虑一下您的组织从 Open WebUI 获得的实际收益。像您这样的用户的适度贡献使我们能够更多地专注于改进功能，而不是管理资源。每一份帮助都能产生有意义的差异，使我们的日常现实与我们雄心勃勃的目标保持一致。
+请思考一下您的组织从 Open WebUI 获得的实际收益。像您这样的用户提供适度的赞助，能让我们将更多精力集中在改进功能上，而不是资源管理上。每一份帮助都能带来实质性的改变，让我们更接近既定目标。
 
-我们非常感谢我们当前的赞助商。您的承诺使我们更接近实现 Open WebUI 的全部潜力。每一份贡献，无论大小，都能加强项目并为其持续成功奠定基础。
+我们由衷感谢现有的所有赞助者。您的支持使我们离实现 Open WebUI 的全部潜力更近了一步。每一份贡献，无论大小，都在增强项目的实力，为其持续发展奠定基础。
 
-感谢您考虑加入我们这个实用而富有远见的事业。在这里，每一点支持不仅受到感激——它对于保持我们的项目充满活力、动态和响应用户需求至关重要。
+感谢您考虑加入我们这个充满创新与活力的项目。在这里，每一份支持都弥足珍贵，都是保持项目蓬勃发展、持续创新的关键。
 
 ## 赞助政策
 
-在 Open WebUI，我们的社区始终是第一位的。我们欢迎赞助商，但他们必须尊重我们以社区为先的方针。这一理念指导着我们所有的赞助政策。
+在 Open WebUI，我们始终将社区放在首位。我们欢迎赞助者，但他们必须尊重我们以社区为先的理念。这一理念指导着我们所有的赞助政策。
 
-### 硬性规则
+### 基本准则
 
-这些是赞助商必须遵守的非协商规则：
+以下是赞助者必须遵守的基本准则：
 
-- 赞助商将始终被明确标识为赞助商。
+- 赞助者将始终被明确标识为赞助者身份。
 - 严禁对我们的社区成员采取激进的销售策略。
-- 我们不向赞助商出售社区成员的个人信息（例如，添加到他们的邮件列表中）。
+- 我们不会向赞助者出售社区成员的个人信息（例如，用于添加到他们的邮件列表中）。
 
-### 软性规则
+### 行为指引
 
-我们的社区成员不应被视为销售线索。
+我们的社区成员不是销售对象。
 
-我们期望赞助商成为模范社区成员。适度宣传您公司的工作机会和展示您的产品是可以接受的，但不允许强行推销。此外，不要要求社区成员加入您的邮件列表。
+我们期望赞助者能成为模范社区成员。适度宣传公司职位和展示产品是可以接受的，但不允许强制推销。同时，请勿主动要求社区成员订阅您的邮件列表。
