--- a/docs/team.mdx
+++ b/docs/team.mdx
@@ -7,23 +7,23 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 <TopBanners />
 
-## 🌟 认识我们的团队！
+## 🌟 团队介绍！
 
-我们的团队由专注的创始人 [Tim J. Baek](https://github.com/tjbck) 领导。虽然 Tim 目前是团队唯一的正式成员，但我们非常幸运地拥有一个由**[优秀贡献者](https://github.com/open-webui/open-webui/graphs/contributors)**组成的社区，他们认为这个项目有价值，并积极参与其持续成功。
+我们的团队由富有奉献精神的创始人 [Tim J. Baek](https://github.com/tjbck) 领导。虽然 Tim 目前是团队中唯一的正式成员，但我们非常幸运能有一个由**[优秀贡献者](https://github.com/open-webui/open-webui/graphs/contributors)**组成的社区，他们认同这个项目的价值并积极参与其持续发展。
 
 ### 💓 我们的贡献者
 
 <a href="https://github.com/open-webui/open-webui/graphs/contributors">
-  <img
-    src="https://contrib.rocks/image?repo=open-webui/open-webui"
-    alt="贡献者"
-  />
+    <img
+        src="https://contrib.rocks/image?repo=open-webui/open-webui"
+        alt="贡献者"
+    />
 </a>
 
 ### 重要提示：
 
-为了保持工作顺畅和有序，请不要联系或使用 `@` 提及官方维护者以外的任何人。如果您有任何问题或需要帮助，`@tjbck` 是您的首选联系人。您也可以通过我们的官方电子邮件 hello@openwebui.com 联系我们。📨
+为了保持运作顺畅，请不要联系或使用 `@` 提及官方维护者以外的任何人。如果您有任何问题或需要帮助，`@tjbck` 是您的对接人。您也可以通过我们的官方邮箱 hello@openwebui.com 联系我们。📨
 
 感谢您的理解和配合！💪
 
-让我们继续一起打造令人惊叹的项目！🚀
+让我们继续一起创造精彩！🚀
